--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,22 +3,6 @@ version: '3'
 services:
   continuous_double_auction:
     build: .
-    image: exchange_server
+    image: project
     ports:
       - '9001:9001'
-
-  frequent_batch_auction:
-    image: exchange_server
-    ports:
-      - '9002:9001'
-    environment:
-      - MECHANISM=fba
-      - INTERVAL=10
-
-  iex:
-    image: exchange_server
-    ports:
-      - '9003:9001'
-    environment:
-      - MECHANISM=iex
-      - DELAY=1
