--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     environment:
       - SERVER_NAME="exchange"
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - CLIENT_PORT="8090"
     depends_on:
       - continuous_double_auction
     networks:
@@ -28,6 +29,7 @@ services:
     environment:
       - SERVER_NAME="exchange"
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - CLIENT_PORT="8090"
     depends_on:
       - continuous_double_auction
     networks:
